Add GPT-2 finetuned

--- a/website/templates/play_game.html
+++ b/website/templates/play_game.html
@@ -18,24 +18,26 @@
                 <label for="player_black_type">Black Player:</label>
                 <select name="player_black_type" id="player_black_type">
                   <option value="USER">Người chơi</option>
-                  <option value="RANDOM">Nhập môn</option>
+                  <option value="RANDOM">Nhập môn (Random)</option>
                   <option value="LSTM">LSTM (AI)</option>
-                  <option value="MINIMAX_1">Dễ (AI)</option>
-                  <option value="MINIMAX_2">Trung bình (AI)</option>
-                  <option value="MINIMAX_3">Khó (AI)</option>
-                  <option value="MINIMAX_4">Rất khó (AI)</option>
+                  <option value="GPT2">GPT-2 (AI)</option> 
+                  <option value="MINIMAX_1">Dễ (Minimax)</option>
+                  <option value="MINIMAX_2">Trung bình (Minimax)</option>
+                  <option value="MINIMAX_3">Khó (Minimax)</option>
+                  <option value="MINIMAX_4">Rất khó (Minimax)</option>
                 </select>
               </div>
               <div>
                 <label for="player_white_type">White Player:</label>
                 <select name="player_white_type" id="player_white_type">
-                  <option value="MINIMAX_3">Khó (AI)</option>
+                  <option value="GPT2">GPT-2 (AI)</option>
+                  <option value="MINIMAX_3">Khó (Minimax)</option>
                   <option value="USER">Người chơi</option>
-                  <option value="RANDOM">Nhập môn</option>
-                  <option value="LSTM">LSTM (AI)</option> 
-                  <option value="MINIMAX_1">Dễ (AI)</option>
-                  <option value="MINIMAX_2">Trung bình (AI)</option>
-                  <option value="MINIMAX_4">Rất khó (AI)</option>
+                  <option value="RANDOM">Nhập môn (Random)</option>
+                  <option value="LSTM">LSTM (AI)</option>
+                  <option value="MINIMAX_1">Dễ (Minimax)</option>
+                  <option value="MINIMAX_2">Trung bình (Minimax)</option>
+                  <option value="MINIMAX_4">Rất khó (Minimax)</option>
                 </select>
               </div>
               <input type="submit" value="Start Game" style="margin-top: 20px;">
